--- a/assets/css/noscript.css
+++ b/assets/css/noscript.css
@@ -1,21 +1,27 @@
 /*
-	Identity by HTML5 UP
+	Photon by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Header */
 
-	body:after {
-		display: none;
+	body.is-preload #header .inner {
+		-moz-transform: none;
+		-webkit-transform: none;
+		-ms-transform: none;
+		transform: none;
+		opacity: 1;
 	}
 
-/* Main */
+		body.is-preload #header .inner .actions {
+			-moz-transform: none;
+			-webkit-transform: none;
+			-ms-transform: none;
+			transform: none;
+			opacity: 1;
+		}
 
-	#main {
-		-moz-transform: none !important;
-		-webkit-transform: none !important;
-		-ms-transform: none !important;
-		transform: none !important;
-		opacity: 1 !important;
+	body.is-preload #header:after {
+		opacity: 0;
 	}
