--- a/assets/sass/noscript.scss
+++ b/assets/sass/noscript.scss
@@ -3,24 +3,30 @@
 @import 'libs/mixins';
 @import 'libs/vendor';
 @import 'libs/breakpoints';
+@import 'libs/html-grid';
 
 /*
-	Identity by HTML5 UP
+	Photon by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/* Basic */
+/* Header */
 
-	body {
-		&:after {
-			display: none;
+	body.is-preload {
+		#header {
+			.inner {
+				@include vendor('transform', 'none');
+				opacity: 1;
+
+				.actions {
+					@include vendor('transform', 'none');
+					opacity: 1;
+				}
+			}
+
+			&:after {
+				opacity: 0;
+			}
 		}
-	}
-
-/* Main */
-
-	#main {
-		@include vendor('transform', 'none !important');
-		opacity: 1 !important;
 	}
